samples/_failures_safe/1761288363_b00100_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1423f715.c: In function ‘main’:
./samples/SAFE/__tmp_1423f715.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
